--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="blue_2">#D6E6F2</color>
     <color name="blue_3">#B9D7EA</color>
     <color name="blue_4">#769FCD</color>
+
+    <color name="Neutral_Variant_90">#E1E5D8</color>
+    <color name="Neutral_Variant_30">#44483F</color>
+    <color name="Neutral_Variant_50">#73776D</color>
 </resources>
