--- a/app/src/main/res/menu/album_menu.xml
+++ b/app/src/main/res/menu/album_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search"
+        android:title="필터"
+        android:icon="@drawable/ic_search_24"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/filter"
         android:title="필터"
         android:icon="@drawable/ic_filter_24"
