--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.FourPic" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- 상단바 반투명 적용-->
-<!--        <item name="android:windowTranslucentStatus">true</item>-->
+        <!--        <item name="android:windowTranslucentStatus">true</item>-->
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_3</item>
+        <item name="colorPrimary">@color/Neutral_Variant_90</item>
         <item name="colorPrimaryVariant">@color/blue_4</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/Neutral_Variant_90</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/Neutral_Variant_30</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/Neutral_Variant_90</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/Neutral_Variant_90</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
